use a DEBUG instead of warning if dbus_bus_add_match failed

Also, make the message more explicit to one can check is D-Bus version if he's
wondering why it failed.

https://bugs.freedesktop.org/show_bug.cgi?id=51282